--- a/src/components/ExploreSection/style.scss
+++ b/src/components/ExploreSection/style.scss
@@ -67,7 +67,7 @@
 
 @media (max-width: 600px) {
   .explore-section {
-    height: 1850px;
+    height: 2200px;
 
     .section-size {
       .title {
@@ -75,6 +75,12 @@
           font-size: 30px;
         }
       }
+    }
+  }
+
+  .Explonation {
+    img {
+      display: none;
     }
   }
 }
